--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@babel/register": "^7.5.5",
     "del": "^5.0.0",
     "gulp": "^4.0.2",
+    "gulp-append-prepend": "^1.0.8",
     "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-rename": "^1.4.0",
