--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "JavaScript execution orchestration library",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -34,10 +34,13 @@
     "del": "^5.0.0",
     "gulp": "^4.0.2",
     "gulp-append-prepend": "^1.0.8",
-    "gulp-babel": "^8.0.0",
+    "gulp-better-rollup": "^4.0.1",
     "gulp-concat": "^2.6.1",
     "gulp-rename": "^1.4.0",
-    "gulp-uglify": "^3.0.2"
+    "jest": "^24.8.0",
+    "merge2": "^1.2.3",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-uglify": "^6.0.2"
   },
   "dependencies": {}
 }
